--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "view-ui-project-ts",
+  "name": "vue-fabric-editor",
   "private": true,
   "version": "1.0.0",
   "description": "a template project for vue3, ViewUIPlus, TypeScript and Vite.",
@@ -12,7 +12,8 @@
     "build:staging": "vite build --mode=staging",
     "preview": "npm run build && vite preview",
     "preview:staging": "npm run build:staging && vite preview --mode=staging",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "tauri": "tauri"
   },
   "dependencies": {
     "@vueuse/core": "^10.1.0",
@@ -35,6 +36,7 @@
   "devDependencies": {
     "@commitlint/cli": "^17.4.2",
     "@commitlint/config-conventional": "^17.4.2",
+    "@tauri-apps/cli": "^1.5.11",
     "@types/events": "^3.0.0",
     "@types/fabric": "^5.3.0",
     "@types/lodash-es": "^4.17.7",
